2005-07-07  Francois Marier  <francois@serioushack.com>

	* *.cpp, *.hpp: Change the license and copyright notices to the
	GNU LGPL.

	* COPYING: Provide a copy of the full license.

	* Makefile.am: Include COPYING in the tarballs and zips.

2005-07-05  Francois Marier  <francois@serioushack.com>

	* src/UniformPanel.cpp: Specify the mipmap level in the memory()
	call.
	
	* src/shaders/GlassShader.cpp, ShinyBumpMapShader.cpp,
	HorizonMapping.cpp, JeweledShader.cpp, LargeTexture.cpp,
	Textures.cpp, Derivatives.cpp, DiscoShader.cpp, BumpMapShader.cpp,
	CelShader.cpp, PhongShader.cpp, SatinShader.cpp, WorleyShader.cpp,
	HomomorphicShader.cpp, LuciteShader.cpp, EnvMapShader.cpp,
	DummyShader.cpp, AlgebraShader.cpp: Switch from ShTexture* to
	ShTable* to disable mipmapping.
	
2005-06-16  Francois Marier  <francois@serioushack.com>
	
	After the 0.7.8 release:
	
	* src/UniformPanel.cpp, ShrikeFrame.cpp, ShrikeFrame.hpp,
	ShrikeCanvas.cpp, ShrikeApp.cpp, ShrikeCanvas.hpp,
	ShrikePropsDialog.cpp: Make Shrike compile with unicode-enabled
	wxWindows libraries (issue203).  Thanks to Nicholas for the patch!

2005-06-15  Francois Marier  <francois@serioushack.com>

	* src/shaders/GlassShader.cpp, ShinyBumpMapShader.cpp,
	HorizonMapping.cpp, JeweledShader.cpp, LargeTexture.cpp,
	Textures.cpp, Derivatives.cpp, BumpMapShader.cpp, DiscoShader.cpp,
	CelShader.cpp, PhongShader.cpp, SatinShader.cpp, WorleyShader.cpp,
	HomomorphicShader.cpp, LuciteShader.cpp, EnvMapShader.cpp,
	DummyShader.cpp, AlgebraShader.cpp: Make use of normalize_path()
	to support textures on Windows too. 

2005-06-07  Francois Marier  <francois@serioushack.com>

	* src/shaders/TangentArrows.cpp, EdgeDetection.cpp, EdgeGooch.cpp,
	HairShader.cpp, Logo.cpp, src/ShrikeCanvas.cpp: Rename
	glMultiTexCoordNARB to glMultiTexCoordN if GL_VERSION_1_4 is defined.

2005-06-06  Francois Marier  <francois@serioushack.com>

	* src/shaders, src/HDRImages: Remove ShUnclamped.
	Change AttribNf textures to AttribNfub.